# agentc-trading

./: .env.example  .gitignore  POSITION_MANAGEMENT.md  README.md  SKILL.md  STRATEGY.md  config.yaml  daemon.py  prompt_template.md  pyproject.toml
logs/: cycles_20260218.jsonl
src/: cli.py  collector.py  indicators.py  main.py  monitoring.py  risk_manager.py  sentiment.py  strategy.py  taapi.py
src/adapters/: base.py  openrouter_adapter.py
src/models/: config.py  decision.py  market.py  position.py
tests/: test_decision_parsing.py  test_indicators.py  test_monitoring.py  test_risk_manager.py
